--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-sha1": "^0.6.0",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0-rc.3",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
